# coinflipbot

./: Cargo.toml
src/: coin.rs  http.rs  main.rs  social.rs
