[package]
name = "coinflipbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }

[dev-dependencies]
mockito = "0.26.0"
tokio = { version = "1.15.0", features = ["full"] }
